tests/models/enum/named/u128/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2)]
        u128
    ),
}
fn main() {}
